add_subdirectory(algorithm)
add_subdirectory(array)
add_subdirectory(bit)
add_subdirectory(cmath)
add_subdirectory(compare)
add_subdirectory(concepts)
add_subdirectory(config)
add_subdirectory(cstddef)
add_subdirectory(cstdint)
add_subdirectory(cstdlib)
add_subdirectory(cstring)
add_subdirectory(functional)
add_subdirectory(limits)
add_subdirectory(memory)
add_subdirectory(numbers)
add_subdirectory(preprocessor)
add_subdirectory(ratio)
add_subdirectory(tmp)
add_subdirectory(tpp)
add_subdirectory(tuple)
add_subdirectory(type_traits)
add_subdirectory(utility)
