add_subdirectory(algorithm)
add_subdirectory(array)
add_subdirectory(bit)
add_subdirectory(cmath)
add_subdirectory(compare)
add_subdirectory(concepts)
add_subdirectory(config)
add_subdirectory(cstddef)
add_subdirectory(cstdint)
add_subdirectory(cstdlib)
add_subdirectory(cstring)
add_subdirectory(debug)
add_subdirectory(functional)
add_subdirectory(initializer_list)
add_subdirectory(iterator)
add_subdirectory(limits)
add_subdirectory(memory)
add_subdirectory(numbers)
add_subdirectory(numeric)
add_subdirectory(preprocessor)
add_subdirectory(random)
add_subdirectory(ranges)
add_subdirectory(ratio)
add_subdirectory(stdexcept)
add_subdirectory(tmp)
add_subdirectory(tpp)
add_subdirectory(tuple)
add_subdirectory(type_traits)
add_subdirectory(utility)
