set(TARGET_NAME "bksge_fnd")

if (TARGET ${TARGET_NAME})
	RETURN()
endif()

project(${TARGET_NAME} LANGUAGES C CXX)

add_library(${TARGET_NAME} INTERFACE)
add_library(Bksge::fnd ALIAS ${TARGET_NAME})

add_subdirectory(algorithm)
add_subdirectory(any)
add_subdirectory(array)
add_subdirectory(bigint)
add_subdirectory(bit)
add_subdirectory(cmath)
add_subdirectory(compare)
add_subdirectory(complex)
add_subdirectory(concepts)
add_subdirectory(config)
add_subdirectory(cstddef)
add_subdirectory(cstdint)
add_subdirectory(cstring)
add_subdirectory(debug)
add_subdirectory(deque)
add_subdirectory(detail)
add_subdirectory(forward_list)
add_subdirectory(functional)
add_subdirectory(hash_functions)
add_subdirectory(ios)
add_subdirectory(iterator)
add_subdirectory(list)
add_subdirectory(map)
add_subdirectory(memory)
add_subdirectory(numbers)
add_subdirectory(numeric)
add_subdirectory(optional)
add_subdirectory(preprocessor)
add_subdirectory(queue)
add_subdirectory(random)
add_subdirectory(ranges)
add_subdirectory(ratio)
add_subdirectory(serialization)
add_subdirectory(set)
add_subdirectory(span)
add_subdirectory(static_string)
add_subdirectory(static_vector)
add_subdirectory(stdexcept)
add_subdirectory(string)
add_subdirectory(string_view)
add_subdirectory(system_error)
add_subdirectory(tmp)
add_subdirectory(tpp)
add_subdirectory(tuple)
add_subdirectory(type_traits)
add_subdirectory(units)
add_subdirectory(unordered_map)
add_subdirectory(unordered_set)
add_subdirectory(utility)
add_subdirectory(variant)
add_subdirectory(vector)

target_link_libraries(${TARGET_NAME}
	INTERFACE
		Bksge::algorithm
		Bksge::any
		Bksge::array
		Bksge::bigint
		Bksge::bit
		Bksge::cmath
		Bksge::compare
		Bksge::complex
		Bksge::concepts
		Bksge::config
		Bksge::cstddef
		Bksge::cstdint
		Bksge::cstring
		Bksge::debug
		Bksge::deque
		Bksge::detail
		Bksge::forward_list
		Bksge::functional
		Bksge::hash_functions
		Bksge::ios
		Bksge::iterator
		Bksge::list
		Bksge::map
		Bksge::memory
		Bksge::numbers
		Bksge::numeric
		Bksge::optional
		Bksge::preprocessor
		Bksge::queue
		Bksge::random
		Bksge::ranges
		Bksge::ratio
		Bksge::serialization
		Bksge::set
		Bksge::span
		Bksge::static_string
		Bksge::static_vector
		Bksge::stdexcept
		Bksge::string
		Bksge::string_view
		Bksge::system_error
		Bksge::tmp
		Bksge::tpp
		Bksge::tuple
		Bksge::type_traits
		Bksge::units
		Bksge::unordered_map
		Bksge::unordered_set
		Bksge::utility
		Bksge::variant
		Bksge::vector)
