cmake_minimum_required(VERSION 3.12)

add_subdirectory(alpha_blend)
add_subdirectory(box)
add_subdirectory(clear)
add_subdirectory(color_write_mask)
add_subdirectory(constant_buffer)
add_subdirectory(cull_face)
add_subdirectory(fill_mode)
add_subdirectory(indexed)
add_subdirectory(line)
add_subdirectory(point)
add_subdirectory(primitives)
add_subdirectory(sampler)
add_subdirectory(scissor)
add_subdirectory(stencil_test)
add_subdirectory(texture)
add_subdirectory(triangle)
add_subdirectory(viewport)
