add_subdirectory(alpha_blend)
add_subdirectory(box)
add_subdirectory(clear)
add_subdirectory(clear_flag)
add_subdirectory(color_write_mask)
add_subdirectory(constant_buffer)
add_subdirectory(cull_face)
add_subdirectory(depth_test)
add_subdirectory(fill_mode)
add_subdirectory(indexed)
add_subdirectory(line)
add_subdirectory(logic_op)
add_subdirectory(mipmap)
add_subdirectory(point)
add_subdirectory(render_to_texture)
add_subdirectory(sampler)
add_subdirectory(scissor)
add_subdirectory(stencil_test)
add_subdirectory(texture)
add_subdirectory(triangle)
add_subdirectory(viewport)
